--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "DRN1",
-    "slug": "DRN1",
+    "name": "drn1",
+    "slug": "drn1",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
