--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-radio-player": "^0.2.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-av": "~8.7.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
